# mango

./: Cargo.toml  README.md
.github/workflows/: ci.yml  config.yml
src/: lib.rs  main.rs
src/domain/entity/: dom.rs  dom_test.rs  mod.rs  node.rs  parser.rs  style.rs  style_node.rs
src/interfaces/controllers/: layout.rs  mod.rs  parser.rs  style.rs
src/interfaces/controllers/parser/: css.rs  html.rs  html_test.rs  mod.rs
