[package]
name = "mango"
version = "0.1.0"
authors = ["TaKO8Ki <takoyaki0316@gmail.com>"]
edition = "2018"

[dependencies]
gio= "0.2.0"
gdk =  {version = "0.6.0", features=["v3_16"]}
gtk = {version = "0.2.0", features = ["v3_16"]}
reqwest = {version = "0.10.0", features=["json"]}
tokio = {version = "0.2.6", features = ["macros"]}
futures = "0.1"
